<resources>
    <string name="app_name">ALC 4 Phase 1</string>
    <string name="welcome_message">Welcome to ALC 4.0</string>

    <string name="about_alc">About ALC</string>
    <string name="my_profile">My Profile</string>
    <string name="my_profie_name">Paballo Moloi</string>

    <string name="track">Track: </string>
    <string name="country">Country: </string>
    <string name="email">Email: </string>
    <string name="phone_number">Phone Number: </string>
    <string name="slack_name">Slack Username: </string>

    <string name="track_android">Android</string>
    <string name="email_value">moloipaballo@gmail.com</string>
    <string name="country_value">South Africa</string>
    <string name="number_value">+27 786 530976</string>
    <string name="slack_value">\@Pabi Moloi</string>

    <string name="andela_url">http://www.andela.com/alc/</string>
</resources>

